<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    tools:context=".SignUpActivity"
    android:fillViewport="true"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/signup_activity"
        >

        <EditText
            android:id="@+id/signup_first_name"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:ems="10"
            android:hint="@string/hint_first_name"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            app:layout_constraintBottom_toTopOf="@+id/signup_last_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signup_title"
            android:autofillHints="" />

        <EditText
            android:id="@+id/signup_last_name"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:ems="10"
            android:hint="@string/hint_last_name"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            app:layout_constraintBottom_toTopOf="@+id/signup_email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signup_first_name"
            android:autofillHints="" />

        <EditText
            android:id="@+id/signup_email"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            app:layout_constraintBottom_toTopOf="@+id/signup_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signup_last_name" />

        <EditText
            android:id="@+id/signup_password"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            app:layout_constraintBottom_toTopOf="@+id/choose_image_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signup_email" />

        <Button
            android:id="@+id/signup_submit_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="signUp"
            android:text="@string/signup_submit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/signup_sign_in_hint"
            app:layout_constraintBottom_toTopOf="@+id/signup_submit_btn"
            app:layout_constraintEnd_toStartOf="@+id/signup_sign_in_btn"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/choose_image_button" />

        <Button
            android:id="@+id/signup_sign_in_btn"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:minWidth="0dp"
            android:minHeight="48dp"
            android:onClick="navigateToSignIn"
            android:text="@string/signup_sign_in_hint_action"
            android:textSize="14sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textView" />

        <TextView
            android:id="@+id/signup_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="56dp"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textSize="34sp"
            app:layout_constraintBottom_toTopOf="@+id/signup_first_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <Button
            android:id="@+id/choose_image_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="30dp"
            android:onClick="chooseImage"
            android:text="Choose Profile Picture"
            app:layout_constraintBottom_toTopOf="@+id/textView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signup_password" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>