<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".SignInActivity"
        android:id="@+id/signin_activity"
        >

        <EditText
            android:id="@+id/signin_email"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            app:layout_constraintBottom_toTopOf="@+id/signin_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signin_title" />

        <EditText
            android:id="@+id/signin_password"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            app:layout_constraintBottom_toTopOf="@+id/textView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signin_email" />

        <Button
            android:id="@+id/signin_submit_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="signIn"
            android:text="@string/signin_submit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/signin_register_hint"
            app:layout_constraintBottom_toTopOf="@+id/signin_submit_btn"
            app:layout_constraintEnd_toStartOf="@+id/signin_sign_up_btn"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signin_password" />

        <Button
            android:id="@+id/signin_sign_up_btn"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:minWidth="0dp"
            android:minHeight="48dp"
            android:onClick="navigateToSignUp"
            android:text="@string/signin_register_hint_action"
            android:textSize="14sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textView" />

        <TextView
            android:id="@+id/signin_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="56dp"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textSize="34sp"
            app:layout_constraintBottom_toTopOf="@+id/signin_email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>